Fixed layout problem

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -33,7 +33,7 @@ h1 {
   }
   &.extra {
     font-size: 5em;
-    margin: 0px auto 0;
+    margin: 20px auto 0;
   }
 }
 h2 {
@@ -214,7 +214,6 @@ td {
     line-height: 1em;
     &.extra {
       font-size: 4em;
-      margin: -20px auto 0;
     }
     &.left {
       text-align: left;
